# dreamcode

./: .gitignore  Cargo.toml
.github/workflows/: sync_upstream.yml
assets/themes/cerebral/: LICENSE  cerebral.json
crates/acp_thread/src/: acp_thread.rs
crates/acp_tools/src/: acp_tools.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_connection_store.rs  agent_panel.rs  agent_ui.rs  thread_import.rs  threads_archive_view.rs
crates/dream_inspector/: Cargo.toml
crates/dream_inspector/src/: categories.rs  dream_inspector.rs  feed.rs  http.rs  panel.rs
crates/reverie_agent/: Cargo.toml
crates/reverie_agent/src/: augment.rs  backend.rs  connection.rs  http.rs  observer.rs  reverie_agent.rs  server.rs  tests.rs
crates/zed/: Cargo.toml
crates/zed/src/: zed.rs
docs/: reverie-agent.md  smoke-test-runbook.md
docs/superpowers/plans/: 2026-04-20-reverie-agent-backend.md  2026-04-21-phase-1-5a-reverie-memory-auto-retrieval.md  2026-04-21-phase-1-5b-universal-memory-middleware.md  2026-04-21-phase-1-5c-per-session-persistence.md  2026-04-21-phase-1-5d-mid-call-cancel.md  2026-04-21-phase-1-5e-nested-subagent-streaming.md  2026-04-22-phase-2-dream-inspector.md  2026-04-29-phase-0-mcp-context-server.md  2026-05-02-remaining-phase-work.md  2026-07-12-upstream-sync-v1.10.2.md
docs/superpowers/specs/: 2026-04-21-phase-1-5a-reverie-memory-auto-retrieval-design.md  2026-04-21-phase-1-5b-universal-memory-middleware-design.md  2026-04-21-phase-1-5c-per-session-persistence-design.md  2026-04-21-phase-1-5d-mid-call-cancel-design.md  2026-04-21-phase-1-5e-nested-subagent-streaming-design.md  2026-04-22-phase-2-dream-inspector-design.md  2026-04-29-phase-0-mcp-context-server-design.md  2026-07-12-upstream-sync-v1.10.2-design.md
